home.html touchup

--- a/Testing/mysite/home/templates/homepage.html
+++ b/Testing/mysite/home/templates/homepage.html
@@ -137,13 +137,14 @@
                             </div>   {% endcomment %}
 
                             <div class="col-auto">
-                                {% comment %} <a href="#jump"> {% endcomment %}
-                                    <button class="btn btn-outline-light text-dark border-0 rounded-pill ml-n5" style="margin-top: 10px;" type="submit" onclick="result_display()">
-                                        <a href="#jump">
-                                            <i class="fa fa-search" style="font-size: 25px; color: black;"></i>
-                                        </a>
+                                {% comment %} <a href="#jump"></a> {% endcomment %}
+                                    <button class="btn btn-outline-light text-dark border-0 rounded-pill ml-n5 fa fa-search" style="margin-top: 10px; font-size: 25px; color: black;" type="submit" onclick="result_display()"></button>
+                                    {% comment %} <button type="button"><a href="#jump" class="fa fa-search" onclick="result_display()"></a></button> {% endcomment %}
+                                        {% comment %} <a href="#jump"> {% endcomment %}
+                                            {% comment %} <i class="fa fa-search" style="font-size: 25px; color: black;"></i>  {% endcomment %}
+                                        {% comment %} </a> {% endcomment %}
                                         {% comment %} <button type = "submit" class="fa fa-search" style="font-size: 22px; color: black; border: none; background-color: transparent;" onclick="result_display()"></button> {% endcomment %}
-                                    </button>
+                                    {% comment %} </button> {% endcomment %}
                                 {% comment %} </a> {% endcomment %}
 
                             </div>
